# MERMAID-For-Reviwe-Phase

./: README.md  backup.py  evaluation.py  interactive_mode.py  main.py  main_hover.py  main_scifact.py  pyproject.toml  requirements.txt  single_agent.py  utils.py  without_mem.py
dataset/bingcheck/: bingcheck_all.jsonl
dataset/factool_qa/: data.jsonl
memory/: factool_evidence_memory.json  hover_evidence_memory.json  scifact_evidence_memory.json
results/: bingcheck_gpt-4o.json  bingcheck_gpt-5-mini_best.json  bingcheck_gpt-5-mini_with_memory.json  bingcheck_gpt-oss-120b.json  bingcheck_gpt-oss-120b_with_memory.json  bingcheck_gpt-oss-20b.json  bingcheck_llama-3.1-70b.json  bingcheck_llama-3.1-8b.json  bingcheck_qwen-2.5-72b.json  bingcheck_qwen-2.5-7b.json  factcheckbench_gpt-4o.json  factcheckbench_gpt-5-mini_without_memory.json  factcheckbench_gpt-oss-120b_without_memory.json  factcheckbench_gpt-oss-20b_without_memory.json  factcheckbench_qwen-72b_without_memory.json  factool_qa_gpt-4o.json  factool_qa_gpt-4o_metrics.json  factool_qa_gpt-4o_single_agent.json  factool_qa_gpt-5-mini.json  factool_qa_gpt-5-mini_with_memory.json  factool_qa_gpt-5.2.json  factool_qa_gpt-5.json  factool_qa_gpt-oss-120b.json  factool_qa_gpt-oss-20b.json  factool_qa_meta-llama-70b.json  factool_qa_qwen-2.5-7b.json  factool_qa_qwen2.5-72b.json  factool_qa_qwen2.5-7b.json  old_output.json  scifact_gpt-5-mini_with_memory.json
src/: llm_provider.py  memory.py
src/server/: __init__.py  googlescholar_tool.py  search_tool.py  wikipedia_tool.py
tests/: test_llm.py  test_mcp_server.py
(+6 files in other folders)
