[project]
name = "kg-claim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "anthropic>=0.59.0",
    "datasets>=4.1.1",
    "fastmcp>=2.12.3",
    "langchain-litellm>=0.2.2",
    "langgraph>=0.6.7",
    "langsmith>=0.4.25",
    "litellm>=1.75.3",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.14.1",
    "openai-agents[litellm]>=0.2.5",
    "openai>=1.97.1",
    "peft>=0.16.0",
    "pydantic>=2.11.7",
    "together>=1.5.25",
    "transformers>=4.54.0",
    "wikipedia-api>=0.8.1",
    "wikipedia>=1.4.0",
]
